Added a few chatchy-generated unit tests, added breaking on too big impulses (idk, seems to be a feature in current Bullet, and might be useful for destruction); continued code improvements and removing unused stuff